objects/DMAPP__DM_Sales_Process_Stage_Qualifier__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the association of Qualifiers to a given Sales Process Stage. They are accessible from the Qualifiers page and the Sales Process Stage page.</description>
    <fields>
        <fullName>DMAPP__DM_Qualifier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select the global qualifier to link to this sales process stage</inlineHelpText>
        <label>Qualifier</label>
        <referenceTo>DMAPP__DM_Qualifier__c</referenceTo>
        <relationshipLabel>Qualifier Process Stages</relationshipLabel>
        <relationshipName>DM_Sales_Process_Stage_Qualifiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Sales_Process_Stage__c</fullName>
        <label>Sales Process Stage</label>
        <referenceTo>DMAPP__DM_Sales_Process_Stage__c</referenceTo>
        <relationshipName>DM_Sales_Process_Stage_Qualifiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Importance__c</fullName>
        <inlineHelpText>Relative importance of this qualifier in the sales process.

Note that the importance level provided will impact:
- Closure Probability 
- Close Date
- Stage (highest importance qualifiers must be completed to move the opp. to the next stage)</inlineHelpText>
        <label>Importance</label>
        <picklist>
            <picklistValues>
                <fullName>Nice to have</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mandatory qualifiers must be completed before the opportunity can move to a future stage in the sales process, regardless of whether or not the overall qualification threshold of the stage has been reached.</inlineHelpText>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sort_Order__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>The order in which this qualifier is displayed relative to the other qualifiers in the stage.

You should make the order value unique for each qualifier in the stage, to guarantee the same order display each time.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Qualifier Process Stage</label>
    <nameField>
        <label>Sales Process Stage Qualifier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualifier Process Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>